Teegan: blog stuff, add blog addditional things/video/image, update blog landing title, fix safari flex box thing with wrap.:

--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -10,6 +10,7 @@ header {
 
   @media (min-width: $screen-sm-min) {
     flex-direction:row;
+		flex-wrap:nowrap;
   }
 
   &.header-home {
