--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -60,6 +60,11 @@
     @media (min-width: $screen-sm-min) {
       padding-left: 45.3%;
     }
+
+    img {
+      max-width: 100%;
+      height:auto;
+    }
   }
 
 
@@ -817,14 +822,6 @@ section.subscribe {
         }
       }
     }
-  }
-}
-
-.blog-post {
-  .main {
-    padding-top: 5%;
-    position:relative;
-    margin-bottom:10%;
 
     > h1 {
       z-index:2;
@@ -843,6 +840,144 @@ section.subscribe {
       }
     }
   }
+}
+
+.blog-post {
+  .main {
+    margin-top: 5%;
+    position:relative;
+    margin-bottom:10%;
+
+    > p.h1 {
+      z-index:2;
+
+      a {
+        color:#000;
+        border:0;
+
+        &:hover, &:focus {
+          color: $pastel-green;
+        }
+      }
+
+      @media (min-width: $screen-sm-min) {
+        position:absolute;
+        top: 6.84%;
+        left: 8.35%;
+
+      }
+
+      span {
+        border-bottom:4px solid $burnt-sienna;
+        display:inline-block;
+        padding-bottom:13px;
+      }
+    }
+  }
+
+  .blog-additional {
+    display:flex;
+    justify-content: space-between;
+    max-width:1252px;
+    margin: 5% auto;
+    flex-direction: column;
+    width:100%;
+    padding: 0 30px;
+
+    @media (min-width:$screen-sm-min) {
+      flex-direction: row;
+      padding:0;
+    }
+
+    > div {
+      width:100%;
+      margin-bottom:30px;
+
+      @media (min-width:$screen-sm-min) {
+        width:50%;
+        margin: 0 30px;
+      }
+    }
+
+    .additional-video, .additional-image {
+      position:relative;
+
+      .caption {
+        font-weight:lighter;
+        font-style:italic;
+        font-size: $font-size-h2;
+        color: #000000;
+        line-height: 1.13333333333333em; //34px;
+      }
+
+      a {
+        position:relative;
+      }
+
+      img {
+        max-width:100%;
+        height:auto;
+      }
+
+      .additional-border{
+        position:relative;
+        margin-bottom:20px;
+
+        &:before {
+          content: "";
+          top:-5%;
+          left:-5%;
+          width:calc(100% - 6px);
+          display:block;
+          position:absolute;
+          pointer-events:none;
+          height:calc(100% - 6px);
+          border:3px solid #000;
+          z-index:2;
+        }
+      }
+    }
+
+    .additional-image {
+
+      .additional-border:before {
+        border-color: $tulip-tree;
+      }
+    }
+
+    .additional-video {
+
+
+      .additional-border:before {
+        border-color: $pastel-green;
+      }
+
+      a {
+        border:0;
+        display:block;
+
+        &:after {
+          content: "";
+          position:absolute;
+          width:22.16494845360768%;
+          //height:129px;
+          padding-bottom:22.16494845360768%;
+          background:url('../images/video-play.svg') no-repeat;
+          opacity:0.75;
+          left:50%;
+          top:50%;
+          @include transform(translate(-50%, -50%));
+          @include transition(0.2s ease-in-out opacity);
+        }
+
+        &:hover, &:focus {
+          &:after {
+            opacity:1;
+          }
+        }
+      }
+    }
+  }
 
   article {
 
@@ -851,6 +986,7 @@ section.subscribe {
       float:none;
       clear:both;
       margin-bottom: 61px;
+      overflow: auto;
 
       > h1 {
         background: #efefef;
@@ -867,6 +1003,15 @@ section.subscribe {
         // max-width: 924px;
         // margin-left: -30px;
         // margin-right: -30px;
+
+        .author {
+          font-size: 0.35em;
+          letter-spacing:0.2em;
+          text-transform:uppercase;
+          display:block;
+          //text-align:right;
+          font-weight:bold;
+        }
 
         @media (min-width: $screen-sm-min) {
           margin: 0 auto;
@@ -903,6 +1048,7 @@ section.subscribe {
           margin-left: 5.2%;
           margin-top: -3.23%;
           //margin-bottom: 5%;
+          margin-bottom: 35px;
           float: left;
           margin-right: 46px;
         }
@@ -989,7 +1135,7 @@ section.subscribe {
 
       @media (min-width:$screen-sm-min) {
         width:100%;
-        margin: 13.9% 0 0 0; //0 0 33.4%;
+        margin: 3.9% 0 0 0; //0 0 33.4%;
         padding: 0 calc(27.3% / 1.5) 0  calc(33.2% / 1.5);
       }
 
@@ -1063,10 +1209,21 @@ section.subscribe {
   ul {
     display:flex;
     justify-content: space-between;
+    align-items: flex-end;
     padding:0;
     list-style:none;
 
     li {
+      padding: 0 10px;
+
+      &:first-child {
+        padding-left:0;
+      }
+
+      &:last-child {
+        padding-right:0;
+      }
+
       a {
         //width: 60%;
         //font-size: 0.85714285714286em; //12px;/* font calc addition */
@@ -1332,5 +1489,87 @@ article.blog-article {
       }
     }
 	}
+}
 
+.title-grey-block {
+  background: #efefef;
+  // padding: 14.5% 8% 15.5% 13%;
+  padding: 8.6% 7% 5.75% 7%;
+  //font-size: 3.42857142857143em; //48px;/* font calc addition */
+  color: #000;
+  font-weight:normal;
+  letter-spacing:0;
+  line-height: 1.20833333333333em; //58px;
+  text-transform:none;
+  font-size:$font-large-intro;
+  position:relative;
+  text-align:right;
+
+  .blog .main > & {
+    padding: 8.6% 4% 5.75% 7%;
+
+    @media (min-width: $screen-sm-min) {
+      margin: 8.9% 6.3% 11.8% 10.3%;
+    }
+  }
+
+  &:after {
+    content:"";
+    display:block;
+    height: 0;
+    padding-bottom: 16px; //20px
+    width: 100%;
+    background-position: center 100%;
+    background: url('../images/zig-zag-wide.svg');
+    background-repeat: repeat-x;
+    background-size: auto 100%;
+    position: absolute;
+    bottom:-1px;
+    left: 0;
+    z-index:1;
+  }
+}
+
+.blog .main {
+  > p.h1, > .title {
+    top: 1.55%;
+    left: 4.6%;
+  }
+
+  .blog-article + h2 {
+    position:relative;
+
+    &:before {
+      position:absolute;
+      border-bottom: 4px solid #F27959;
+
+      left: -6.8%;
+      top: 15.5%;
+      font-weight: bold;
+      font-size: 40px;
+      text-transform: uppercase;
+      letter-spacing: 0.13em;
+      padding-bottom:4px;
+
+      @media (min-width: $screen-sm-min) {
+        content:"Older";
+      }
+    }
+  }
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+
+  iframe, object, embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
